<resources>
    <string name="app_name">Agruino-kotlin</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="shortPass">Invalid Password, min 8 characters</string>
    <string name="menu_values">Values</string>
    <string name="moisture">Moisture</string>
    <string name="water">Water values</string>
    <string name="historical">Historical</string>
    <string name="values_icon">Values Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_ok">Login ok</string>
    <string name="current">Current Value</string>
    <string name="avg">Average Value</string>
    <string name="log">Historical Values</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="filter">Filter</string>
    <string name="exit">Exit</string>
</resources>