<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:gravity="center_horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="3"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tvDateLog"
                android:layout_width="411sp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="3"
                android:text="@string/time" />

            <TextView
                android:id="@+id/tvTimeLog"
                android:layout_width="411sp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="3"
                android:text="@string/current" />

            <TextView
                android:id="@+id/tvValueLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>